--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ NEXTCLOUD_USERNAME=
 NEXTCLOUD_PASSWORD=
 NEXTCLOUD_INPUT_PATH=
 NEXTCLOUD_OUTPUT_PATH=
+
+# Notification Connection
+NOTIFICATION_EMAIL_FROM=
+NOTIFICATION_EMAIL_TO=
+NOTIFICATION_EMAIL_SERVER=
+NOTIFICATION_EMAIL_SERVER_USER=
+NOTIFICATION_EMAIL_SERVER_PASSWORD=
