--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,17 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.21</version>
         </dependency>
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.8.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.4.1.Final</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
