--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,1 @@
-.idea/
-.vscode/
-.DS_Store
-
-*.class
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-#Gradle temporary files
-target/
-
-#Eclipse files
-**/.project
-**/.classpath
-**/.settings/
-blog/bin/
-**/.tern-project
-
-#IntelliJ files
-**/*.iml
-**/.idea
-**/.gradle
+**/.DS_Store
