--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 **/application-**.yml
-**/database.mv.db
+**/database*
 
 ### STS ###
 .apt_generated
