--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "angular-datatables": "^10.0.0",
     "bootstrap": "^5.0.0-beta1",
     "datatables.net": "^1.10.23",
+    "datatables.net-bs4": "^1.10.23",
     "datatables.net-dt": "^1.10.23",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
