--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'org.springframework.boot' version '2.4.1'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
+    id 'idea'
+    id 'com.palantir.docker' version '0.25.0'
 }
 
 group = 'com.mav'
@@ -10,6 +12,10 @@ sourceCompatibility = '1.8'
 
 repositories {
     mavenCentral()
+}
+
+docker {
+    name 'hub.docker.com/mavarazo/archivit:latest'
 }
 
 dependencies {
