e add application-test properties

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,43 +1,21 @@
-spring.profiles.active: dev
 
 spring:
   application:
     name: Archivit
   datasource:
-    driver-class-name: ${ENV_DATASOURCE_DRIVER}
-    url: ${ENV_DATASOURCE_URL}
-    username: ${ENV_DATASOURCE_USERNAME}
-    password: ${ENV_DATASOURCE_PASSWORD}
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:file:database
+    username: sa
+    password:
   jpa:
-    database-platform: ${ENV_HIBERNATE_DIALECT}
+    database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
 
 nextcloud:
-  host: ${NEXTCLOUD_HOST}
-  webdav-path: ${NEXTCLOUD_WEBDAV_PATH}
-  username: ${NEXTCLOUD_USERNAME}
-  password: ${NEXTCLOUD_PASSWORD}
-  input-path: ${NEXTCLOUD_INPUT_PATH}
-  output-path: ${NEXTCLOUD_OUTPUT_PATH}
-
----
-
-spring.profiles: integrationtest
-
-ENV_DATASOURCE_DRIVER: org.h2.Driver
-ENV_DATASOURCE_URL: jdbc:h2:mem:test
-ENV_DATASOURCE_USERNAME: sa
-ENV_DATASOURCE_PASSWORD:
-ENV_HIBERNATE_DIALECT: org.hibernate.dialect.H2Dialect
-
-NEXTCLOUD_HOST:
-NEXTCLOUD_WEBDAV_PATH:
-NEXTCLOUD_USERNAME:
-NEXTCLOUD_PASSWORD:
-NEXTCLOUD_INPUT_PATH:
-NEXTCLOUD_OUTPUT_PATH:
-
----
-
-spring.profiles: docker
+  host: ${NEXTCLOUD_HOST:#{null}}
+  webdav-path: ${NEXTCLOUD_WEBDAV_PATH:#{null}}
+  username: ${NEXTCLOUD_USERNAME:#{null}}
+  password: ${NEXTCLOUD_PASSWORD:#{null}}
+  input-path: ${NEXTCLOUD_INPUT_PATH:#{null}}
+  output-path: ${NEXTCLOUD_OUTPUT_PATH:#{null}}
