e travis docker push image

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,8 @@ script:
   - cd backend
   - ./gradlew build
   - ./gradlew check
+  - ./gradlew bootBuildImage
+
+deploy:
+  provider: script
+  script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push mavarazo/archivit-backend
