--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,23 @@ language: java
 
 jdk:
   - openjdk11
-script:
-  - cd backend
-  - ./gradlew build
-  - ./gradlew check
-  - ./gradlew bootBuildImage
 
-deploy:
-  provider: script
-  script: echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin && docker push mavarazo/archivit-backend
+jobs:
+  include:
+    - stage: build
+      script:
+        - cd backend
+        - ./gradlew build
+    - stage: test
+      script: 
+        - cd backend
+        - ./gradlew check
+    - stage: build image
+      script:
+        - cd backend
+        - ./gradlew bootBuildImage
+    - stage: deploy
+      script: 
+        - cd backend
+        - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+        - docker push mavarazo/archivit-backend
